# api-express/src/controllers/v1/api-key.ts
@@ -37,8 +37,11 @@ router.get(
     });
     res.status(200).send({
       ok: true,
-      data: { api_key: apiKey.private_key },
-      message: `Voici votre clé privée. Veuillez la conserver en toute sécurité. Une fois ouvert, ce lien ne sera plus valide. Si vous avez perdu votre clé et que vous avez besoin d'un nouveau lien, veuillez contacter le support via le formulaire de contact https://zacharie.beta.gouv.fr/contact.`,
+      data: {
+        api_key: apiKey.private_key,
+        "Paramètre d'URL `contexte` à remplir lors de l'appel à GET /nouvelle-fiche": apiKey.slug_for_context,
+      },
+      message: `Voici votre clé privée ainsi que le paramètre d'URL \`contexte\` à remplir lors de l'appel à GET /nouvelle-fiche. Veuillez la conserver en toute sécurité. Une fois ouvert, ce lien ne sera plus valide. Si vous avez perdu votre clé et que vous avez besoin d'un nouveau lien, veuillez contacter le support via le formulaire de contact https://zacharie.beta.gouv.fr/contact. `,
     });
   }),
 );
